--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@midscene/web": "^0.14.3",
     "antd": "^5.21.6",
     "dayjs": "1.11.11",
+    "i18next": "^25.0.1",
+    "i18next-browser-languagedetector": "^8.0.5",
     "lucide-react": "^0.488.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.5.1",
     "zustand": "4.5.2"
   },
   "devDependencies": {
